--- a/EnemyLosses/Views/Base.lproj/Main.storyboard
+++ b/EnemyLosses/Views/Base.lproj/Main.storyboard
@@ -78,14 +78,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Day" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AmQ-2t-iy7">
-                                <rect key="frame" x="16" y="88" width="58" height="34"/>
+                                <rect key="frame" x="16" y="106" width="58" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="dYy-NC-cTg">
-                                <rect key="frame" x="16" y="147" width="343" height="593"/>
+                                <rect key="frame" x="16" y="192" width="343" height="548"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
@@ -120,14 +120,25 @@
                                 </prototypes>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A1X-Ak-WXK">
-                                <rect key="frame" x="89" y="88" width="57" height="34"/>
+                                <rect key="frame" x="89" y="106" width="57" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="lk4-ae-inM">
+                                <rect key="frame" x="16" y="163" width="343" height="32"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <segments>
+                                    <segment title="Equipment"/>
+                                    <segment title="Personnel"/>
+                                </segments>
+                                <connections>
+                                    <action selector="segmentChanged:" destination="72e-ot-SIs" eventType="valueChanged" id="kqZ-X1-1qA"/>
+                                </connections>
+                            </segmentedControl>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Op-gi-w23">
-                                <rect key="frame" x="154" y="88" width="199" height="34"/>
+                                <rect key="frame" x="154" y="106" width="199" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Change the Date"/>
@@ -143,6 +154,7 @@
                     <connections>
                         <outlet property="label" destination="A1X-Ak-WXK" id="HXY-i2-0eS"/>
                         <outlet property="okButton" destination="5Op-gi-w23" id="XPr-8s-mCg"/>
+                        <outlet property="segmentedControl" destination="lk4-ae-inM" id="NUb-Qt-RSs"/>
                         <outlet property="tableView" destination="dYy-NC-cTg" id="cVY-rf-QCQ"/>
                     </connections>
                 </viewController>
