--- a/EnemyLosses/Views/Base.lproj/Main.storyboard
+++ b/EnemyLosses/Views/Base.lproj/Main.storyboard
@@ -9,7 +9,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Enemy Losses-->
+        <!--Main View Controller-->
         <scene sceneID="rWd-H9-rsn">
             <objects>
                 <viewController id="Tbm-Ez-llG" customClass="MainViewController" customModule="EnemyLosses" customModuleProvider="target" sceneMemberID="viewController">
@@ -30,7 +30,7 @@
                                     <fontDescription key="titleFontDescription" name="Arial-BoldMT" family="Arial" pointSize="25"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <segue destination="bHd-cY-vCc" kind="show" id="4ec-mm-rKf"/>
+                                    <segue destination="bHd-cY-vCc" kind="show" identifier="detailVC" id="4ec-mm-rKf"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Af0-AE-Q5i">
@@ -43,7 +43,7 @@
                                     <fontDescription key="titleFontDescription" name="Arial-BoldMT" family="Arial" pointSize="25"/>
                                 </buttonConfiguration>
                                 <connections>
-                                    <segue destination="72e-ot-SIs" kind="show" id="UZg-wQ-WkI"/>
+                                    <segue destination="72e-ot-SIs" kind="show" identifier="lossesByDay" id="UZg-wQ-WkI"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -57,7 +57,9 @@
                             <constraint firstItem="DOs-PG-Odz" firstAttribute="top" secondItem="QcX-Q0-ynv" secondAttribute="top" id="pfY-98-fVa"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Enemy Losses" largeTitleDisplayMode="always" id="VlU-aN-qhq"/>
+                    <navigationItem key="navigationItem" largeTitleDisplayMode="always" id="VlU-aN-qhq">
+                        <barButtonItem key="backBarButtonItem" title="Main Screen" id="8zo-jx-pA9"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="detailedLosses" destination="NNI-rx-lZr" id="daH-F0-TiM"/>
                         <outlet property="lossesByDayButton" destination="Af0-AE-Q5i" id="en0-z4-AJ1"/>
@@ -129,7 +131,7 @@
         <!--Day Losses View Controller-->
         <scene sceneID="1It-db-NRm">
             <objects>
-                <viewController modalPresentationStyle="fullScreen" id="WU1-ge-HaT" customClass="DayLossesViewController" customModule="EnemyLosses" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="third" modalPresentationStyle="fullScreen" id="WU1-ge-HaT" customClass="DayLossesViewController" customModule="EnemyLosses" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ob9-28-AUJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="758"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -138,7 +140,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="758"/>
                             </imageView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="50" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Yqn-c5-Gy1">
-                                <rect key="frame" x="16" y="146" width="343" height="551"/>
+                                <rect key="frame" x="16" y="146" width="343" height="578"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <inset key="separatorInset" minX="15" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -222,12 +224,12 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Day" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AmQ-2t-iy7">
-                                <rect key="frame" x="38" y="106" width="58" height="34"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Day:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AmQ-2t-iy7">
+                                <rect key="frame" x="60" y="99" width="47" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="25"/>
-                                <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="20"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="dYy-NC-cTg">
                                 <rect key="frame" x="16" y="232" width="343" height="484"/>
@@ -264,19 +266,6 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Op-gi-w23">
-                                <rect key="frame" x="203" y="106" width="156" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Change a day">
-                                    <fontDescription key="titleFontDescription" name="Arial-BoldMT" family="Arial" pointSize="20"/>
-                                </buttonConfiguration>
-                                <connections>
-                                    <action selector="okButtonPressed:" destination="72e-ot-SIs" eventType="touchUpInside" id="5FR-og-DPW"/>
-                                </connections>
-                            </button>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="lk4-ae-inM">
                                 <rect key="frame" x="16" y="163" width="343" height="32"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -288,13 +277,26 @@
                                     <action selector="segmentChanged:" destination="72e-ot-SIs" eventType="valueChanged" id="kqZ-X1-1qA"/>
                                 </connections>
                             </segmentedControl>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="140" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A1X-Ak-WXK">
-                                <rect key="frame" x="115" y="106" width="57" height="34"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="140" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="A1X-Ak-WXK">
+                                <rect key="frame" x="106" y="99" width="56" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" name="Arial-BoldMT" family="Arial" pointSize="20"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="20"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Op-gi-w23">
+                                <rect key="frame" x="182" y="102" width="177" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Change a day">
+                                    <fontDescription key="titleFontDescription" name="ArialMT" family="Arial" pointSize="20"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="okButtonPressed:" destination="72e-ot-SIs" eventType="touchUpInside" id="5FR-og-DPW"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="XkS-UR-8r4"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -309,7 +311,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="q8T-y6-uOd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1686" y="-379"/>
+            <point key="canvasLocation" x="1685.5999999999999" y="-379.06403940886702"/>
         </scene>
         <!--Splash View Controller-->
         <scene sceneID="kGw-cM-sgv">
